Updated: fixed backend auth token not properly getting the token from cookies, dashboard frontend news section increased height for 10em -> 15em for better readability, activate habit can show display multiple active habits instead of just one, extra clouds removed from dashboard to de-clutter

--- a/front-end/src/components/Homepage/Desktop/1 - Dashboard/Dashboard.scss
+++ b/front-end/src/components/Homepage/Desktop/1 - Dashboard/Dashboard.scss
@@ -119,11 +119,6 @@ $large-desktop: 1400px;
   .active-habit-container {
     grid-row: 2;
     grid-column: 1 / -1;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 1em;
 
     .active-habit-card {
       background-color: #4d88bb;
@@ -132,7 +127,7 @@ $large-desktop: 1400px;
       border-radius: 3em;
 
       .active-habit-card-header {
-        @include card-header(250px, 1fr);
+        justify-self: center;
 
         h3 {
           grid-column: 2;
@@ -151,75 +146,79 @@ $large-desktop: 1400px;
         }
       }
 
-      .active-habit-card-container {
-        display: grid;
-        grid-template-columns: 1fr 200px;
-        gap: 1em;
+      .active-habits-data-container {
+        overflow: auto;
 
-        .active-habit-card-data {
-          display: flex;
-          flex-direction: column;
-          gap: 0.1em;
-          padding: 0.5em 0 0 2em;
-          font-size: 20px;
-        }
+        .active-habit-card-data-container {
+          display: grid;
+          grid-template-columns: 1fr 200px;
+          gap: 1em;
 
-        .active-habit-card-checkmark-outer {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          width: 55%;
-          margin: 0 auto;
-          background-color: #aed2e7;
-          box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+          .active-habit-card-data {
+            display: flex;
+            flex-direction: column;
+            gap: 0.1em;
+            padding: 0.5em 0 0 2em;
+            font-size: 20px;
+          }
 
-          .active-habit-card-checkmark-inner {
-            width: 90%;
-            height: 90%;
-            background-color: #4a90e2;
-            border-radius: 50%;
+          .active-habit-card-checkmark-outer {
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+            width: 55%;
+            margin: 0 auto;
+            background-color: #aed2e7;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 
-            &:hover {
-              cursor: pointer;
-              background-color: #62a5f3;
-            }
-
-            svg {
+            .active-habit-card-checkmark-inner {
               width: 90%;
               height: 90%;
-              stroke: white;
-              stroke-width: 4;
-              stroke-linecap: round;
-              stroke-linejoin: round;
+              background-color: #4a90e2;
+              border-radius: 50%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+
+              &:hover {
+                cursor: pointer;
+                background-color: #62a5f3;
+              }
+
+              svg {
+                width: 90%;
+                height: 90%;
+                stroke: white;
+                stroke-width: 4;
+                stroke-linecap: round;
+                stroke-linejoin: round;
+              }
             }
           }
-        }
-      }
 
-      .flamey-container {
-        display: flex;
-        align-items: center;
-        margin-left: 1em;
+          .flamey-container {
+            display: flex;
+            align-items: center;
+            margin-left: 1em;
 
-        #flamey {
-          width: 40px;
-        }
+            #flamey {
+              width: 40px;
+            }
 
-        .flamey-progress-bar-container {
-          background-color: #0095ff;
-          height: 1em;
-          width: 30%;
-          border-radius: 1em;
+            .flamey-progress-bar-container {
+              background-color: #0095ff;
+              height: 1em;
+              width: 30%;
+              border-radius: 1em;
 
-          .flamey-progress-bar {
-            background-color: orange;
-            height: inherit;
-            border-radius: inherit;
-            transition: width 0.5s ease-in-out;
+              .flamey-progress-bar {
+                background-color: orange;
+                height: inherit;
+                border-radius: inherit;
+                transition: width 0.5s ease-in-out;
+              }
+            }
           }
         }
       }
@@ -298,8 +297,6 @@ $large-desktop: 1400px;
       overflow: hidden;
 
       .site-news-card-header {
-        @include card-header(1fr, 250px);
-
         h3 {
           grid-column: 1;
           display: flex;
@@ -318,7 +315,7 @@ $large-desktop: 1400px;
 
       .site-news-card-content {
         overflow: auto;
-        height: 10em;
+        height: 15em;
         display: grid;
         gap: 1em;
 
@@ -469,8 +466,6 @@ $large-desktop: 1400px;
         border-radius: 3em;
 
         .active-habit-card-header {
-          @include card-header(250px, 1fr);
-
           h3 {
             grid-column: 2;
             display: flex;
@@ -636,8 +631,6 @@ $large-desktop: 1400px;
         text-align: center;
 
         .site-news-card-header {
-          @include card-header(1fr, 250px);
-
           h3 {
             grid-column: 1;
             display: flex;
@@ -656,7 +649,7 @@ $large-desktop: 1400px;
 
         .site-news-card-content {
           overflow: auto;
-          height: 10em;
+          height: 15em;
           display: grid;
           gap: 1em;
 
@@ -808,7 +801,6 @@ $large-desktop: 1400px;
         border-radius: 3em;
 
         .active-habit-card-header {
-          @include card-header(250px, 1fr);
           height: 35%;
 
           h3 {
@@ -976,7 +968,6 @@ $large-desktop: 1400px;
         text-align: center;
 
         .site-news-card-header {
-          @include card-header(1fr, 250px);
           height: 35%;
 
           h3 {
